syntax = "proto3";


package ValidationService;

import "ValidationModels.proto";
//import "D:\\projects\\ISD\\Proto\\ValidationModels.proto";

// The greeting service definition.
service ValidationService {

  // Used to validate a bunch of users
  rpc ValidationStreaming(stream ValidationRequest) returns (stream ValidationReply) {}

  // Used only to validate one user
  rpc ValidationSingle(ValidationRequest) returns (ValidationReply) {}
}